--- a/03-erc20/package.json
+++ b/03-erc20/package.json
@@ -1,7 +1,7 @@
 {
 	"dependencies": {
 		"@openzeppelin/contracts": "^5.2.0",
-		"hardhat": "^2.22.18"
+		"dotenv": "^16.4.7"
 	},
 	"devDependencies": {
 		"@nomicfoundation/hardhat-chai-matchers": "^2.0.0",
@@ -18,6 +18,7 @@
 		"@types/node": ">=18.0.0",
 		"chai": "^4.2.0",
 		"ethers": "^6.4.0",
+		"hardhat": "^2.22.18",
 		"hardhat-gas-reporter": "^1.0.8",
 		"solidity-coverage": "^0.8.0",
 		"ts-node": ">=8.0.0",
